src/test/ui/parser/keyword-return-as-identifier.stderr
error: expected pattern, found keyword `return`
  --> $DIR/keyword-return-as-identifier.rs:4:9
   |
LL |     let return = "foo";
   |         ^^^^^^ expected pattern

error: aborting due to previous error

